[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprites/UI/Fonts/PaperJohnnyEins-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu's/CollectedKeysDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu's/VictoryScreen.gd" type="Script" id=3]
[ext_resource path="res://Sprites/UI/ScreenUI/MenuUnderlay.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_retry.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_nextlvl.png" type="Texture" id=6]
[ext_resource path="res://Sprites/UI/ScreenUI/Icons/ic_mainmenu.png" type="Texture" id=7]
[ext_resource path="res://Sprites/UI/ScreenUI/Themes/UI_GeneralButtons_Theme.tres" type="Theme" id=8]
[ext_resource path="res://Menu's/Medal.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music/Till_Paradiso_-_Funky_Martin_Yeah_TP_79.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 160
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=10]
resource_name = "PersonalBestShake"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, -1.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 30
extra_spacing_top = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 30
extra_spacing_top = 6
font_data = ExtResource( 1 )

[node name="VictoryScreen" type="CanvasLayer"]
script = ExtResource( 3 )
time_label_path = NodePath("Timers/TimeLabel")
key_display_path = NodePath("CollectedKeysDisplay")
silver_time = 80
gold_time = 50
special_time = 30

[node name="MenuUnderlay" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 4 )

[node name="Title" type="MarginContainer" parent="."]
margin_left = 312.0
margin_top = 100.0
margin_bottom = 193.0
focus_neighbour_left = NodePath("../Buttons/NextLevelButton")
focus_neighbour_top = NodePath("../Buttons/NextLevelButton")
focus_neighbour_right = NodePath("../Buttons/NextLevelButton")
focus_neighbour_bottom = NodePath("../Buttons/NextLevelButton")
focus_mode = 2

[node name="TitleUnderlay" type="Label" parent="Title"]
margin_top = 12.0
margin_right = 659.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0.0980392, 0.0431373, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "You won!"
align = 1

[node name="Title" type="Label" parent="Title"]
margin_right = 659.0
margin_bottom = 193.0
custom_colors/font_color = Color( 0.92549, 0.886275, 0.788235, 1 )
custom_fonts/font = SubResource( 2 )
text = "You won!"
align = 1

[node name="Timers" type="Node2D" parent="."]
position = Vector2( 336, 320 )

[node name="TimeLabel" type="Label" parent="Timers"]
margin_right = 420.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0.133333, 0.0823529, 0.0509804, 1 )
custom_fonts/font = SubResource( 3 )
text = "Your Time: 00:00.00"

[node name="PersonalBestLabel" type="Label" parent="Timers/TimeLabel"]
visible = false
margin_left = 48.0
margin_top = 70.0
margin_right = 264.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 108, 15 )
custom_colors/font_color = Color( 0.886275, 0.752941, 0.152941, 1 )
custom_fonts/font = SubResource( 5 )
text = "- Personal Best -"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Timers/TimeLabel/PersonalBestLabel"]
autoplay = "PersonalBestShake"
anims/PersonalBestShake = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="GlobalRankLabel" type="Label" parent="Timers/TimeLabel"]
visible = false
margin_left = 48.0
margin_top = 39.0
margin_right = 264.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.113725, 0.105882, 0.0745098, 1 )
custom_fonts/font = SubResource( 7 )
text = "- Global Top 100% -"
align = 1
valign = 1

[node name="BestTimeLabel" type="Label" parent="Timers"]
margin_top = 112.0
margin_right = 420.0
margin_bottom = 161.0
custom_colors/font_color = Color( 0.133333, 0.0823529, 0.0509804, 1 )
custom_fonts/font = SubResource( 4 )
text = "Best Time: 00:00.00"

[node name="CollectedKeysDisplay" parent="." instance=ExtResource( 2 )]
margin_left = 346.0
margin_top = 516.0
margin_right = 616.0
margin_bottom = 606.0
focus_neighbour_left = NodePath("../Buttons/NextLevelButton")
focus_neighbour_top = NodePath("../Buttons/NextLevelButton")
focus_neighbour_right = NodePath("../Buttons/NextLevelButton")
focus_neighbour_bottom = NodePath("../Buttons/NextLevelButton")
focus_mode = 2

[node name="Medal" parent="." instance=ExtResource( 9 )]
position = Vector2( 757, 333 )

[node name="BestMedal" parent="." instance=ExtResource( 9 )]
position = Vector2( 757, 467 )

[node name="KeyMedal" parent="." instance=ExtResource( 9 )]
position = Vector2( 676, 589 )

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 1024, 600 )

[node name="MainMenuButton" type="Button" parent="Buttons"]
margin_right = 240.0
margin_bottom = 96.0
focus_neighbour_left = NodePath("../RetryButton")
focus_neighbour_top = NodePath("../NextLevelButton")
focus_neighbour_right = NodePath("../NextLevelButton")
focus_neighbour_bottom = NodePath("../NextLevelButton")
theme = ExtResource( 8 )
icon = ExtResource( 7 )
align = 0

[node name="MainButtonLabel" type="Label" parent="Buttons/MainMenuButton"]
margin_left = 98.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "Main"
valign = 1

[node name="MenuButtonLabel" type="Label" parent="Buttons/MainMenuButton"]
margin_left = 98.0
margin_top = 44.0
margin_right = 208.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "Menu"
valign = 1

[node name="NextLevelButton" type="Button" parent="Buttons"]
margin_top = -105.0
margin_right = 240.0
margin_bottom = -9.0
focus_neighbour_left = NodePath("../RetryButton")
focus_neighbour_top = NodePath("../MainMenuButton")
focus_neighbour_right = NodePath("../RetryButton")
focus_neighbour_bottom = NodePath("../MainMenuButton")
theme = ExtResource( 8 )
icon = ExtResource( 6 )
align = 0

[node name="NextButtonLabel" type="Label" parent="Buttons/NextLevelButton"]
margin_left = 98.0
margin_top = 11.0
margin_right = 208.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "Next"
valign = 1

[node name="LevelButtonLabel" type="Label" parent="Buttons/NextLevelButton"]
margin_left = 98.0
margin_top = 44.0
margin_right = 208.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 9 )
text = "Level"
valign = 1

[node name="RetryButton" type="Button" parent="Buttons"]
margin_left = -248.0
margin_right = -8.0
margin_bottom = 96.0
focus_neighbour_left = NodePath("../NextLevelButton")
focus_neighbour_top = NodePath("../NextLevelButton")
focus_neighbour_right = NodePath("../MainMenuButton")
focus_neighbour_bottom = NodePath("../MainMenuButton")
theme = ExtResource( 8 )
icon = ExtResource( 5 )
align = 0

[node name="RetryButtonLabel" type="Label" parent="Buttons/RetryButton"]
margin_left = 98.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 96.0
custom_colors/font_color = Color( 0.333333, 0.270588, 0.211765, 1 )
custom_fonts/font = SubResource( 8 )
text = "Retry"
valign = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -13.0
bus = "Music"

[node name="TimeRequest" type="HTTPRequest" parent="."]

[node name="PatchRequest" type="HTTPRequest" parent="TimeRequest"]

[node name="TotalTimeRequest" type="HTTPRequest" parent="."]

[node name="PatchRequest" type="HTTPRequest" parent="TotalTimeRequest"]

[connection signal="visibility_changed" from="." to="." method="_on_VictoryScreen_visibility_changed"]
[connection signal="button_up" from="Buttons/MainMenuButton" to="." method="_on_Main_Menu_Button_button_up"]
[connection signal="button_up" from="Buttons/NextLevelButton" to="." method="_on_Next_Level_Button_button_up"]
[connection signal="button_up" from="Buttons/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="request_completed" from="TimeRequest" to="." method="_on_TimeRequest_request_completed"]
[connection signal="request_completed" from="TotalTimeRequest" to="." method="_on_TotalTimeRequest_request_completed"]
